[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player Duck Spritesheets/Duck walk_run.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player Duck Spritesheets/Duck jump.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player Duck Spritesheets/Duck idle.png" type="Texture" id=4]
[ext_resource path="res://Assets/Audio/Quack.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/Jump.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Player Duck Spritesheets/Duck death.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "Idle_1",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Run",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 37, 70.3249 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 37, 3.32488 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 10, -2 )
scale = Vector2( 6.16561, 6.16561 )
frames = SubResource( 5 )
animation = "Idle_1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12, 2 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 12, 71 )
shape = SubResource( 7 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
